--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Blog preview card</title>
 
@@ -19,7 +19,7 @@
 
     <div class="card">
       <div class="img-content">
-        <img src="./assets/images/illustration-article.svg" alt="">
+        <img src="./images/illustration-article.svg" alt="">
       </div>
 
       <div class="card-text">
@@ -32,7 +32,7 @@
         <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
         <div class="bt-content">
-          <img src="./assets/images/image-avatar.webp" alt="avatar.svg">
+          <img src="./images/image-avatar.webp" alt="avatar.svg">
           <p class="author">Greg Hooper</p>
         </div>
       </div>
